--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
             <h1 id="title"><span>park</span>n</h1>
             <p id="tagline">effortless parking, every time</p>
             <a href="https://app.parkn.uk/">find spaces</a>
+            <p id="mc_text" class="pulse">No install needed!</p>
         </div>
         <div class="content">
             <h2>The Power of Deep Learning in Your Pocket</h2>
