--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
     <head>
         <title>parkn</title>
         <link rel="stylesheet" href="style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div id="headboard" class="content">
             <h1 id="title"><span>park</span>n</h1>
             <p id="tagline">effortless parking, every time</p>
             <a href="https://app.parkn.uk/">find spaces</a>
+            <p id="mc_text" class="pulse">No install needed!</p>
         </div>
         <div class="content">
             <h2>The Power of Deep Learning in Your Pocket</h2>
